[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/tile_sets/Tiles/Tile (6).png" type="Texture" id=1]
[ext_resource path="res://scripts/falligTile.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29.3133, 18.9915 )

[node name="fallingTile" type="Node2D"]
script = ExtResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 8

[node name="Timer" type="Timer" parent="KinematicBody2D"]
wait_time = 0.2
one_shot = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="KinematicBody2D"]
modulate = Color( 0.933333, 0.0470588, 0.0470588, 1 )
self_modulate = Color( 0.831373, 0.0705882, 0.0705882, 1 )
position = Vector2( -2.95737, -12.761 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]
collision_layer = 8
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Area2D"]
position = Vector2( -2.81093, -20.401 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D/Area2D"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.73415, -9.43526 )
scale = Vector2( 2.9412, 0.773548 )
[connection signal="timeout" from="KinematicBody2D/Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="KinematicBody2D/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
